objects/pse__ERP_PSA_Messaging_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Manages Foundations integration messages in PSA.</description>
    <fields>
        <fullName>pse__Absence_Filter_Field__c</fullName>
        <description>Key name in Foundations to use for filtering absence request messages.</description>
        <inlineHelpText>ERP key name to use for filtering absence request messages.</inlineHelpText>
        <label>Absence Filter Field Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Absence_Filter_Values__c</fullName>
        <description>Key value(s) in Foundations message used for filtering absence request messages. Text and Picklist fields support multiple, semicolon-delimited values.</description>
        <inlineHelpText>ERP message key value(s) used for filtering absence request messages. Text and Picklist fields support multiple, semicolon-delimited values.</inlineHelpText>
        <label>Absence Filter Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Absence_Request_Project__c</fullName>
        <description>The Salesforce record ID of the project to use when creating time off assignments via Foundations.</description>
        <inlineHelpText>The Salesforce record ID of the project to use when creating time off assignments via ERP.</inlineHelpText>
        <label>Absence Request Project</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Automatically_Approve_API_Timecards__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, PSA automatically approves timecards created via the PSA Assignment API when a relevant approval process exists on the Timecard object.</description>
        <inlineHelpText>If selected, PSA automatically approves timecards created via the PSA Assignment API when a relevant approval process exists on the Timecard object.</inlineHelpText>
        <label>Automatically Approve API Timecards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Create_Records_as_Active_Resources__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, PSA creates active resource records when API Resource Correlation ID is populated. API Resource Correlation ID is always populated when details are entered via the API.</description>
        <inlineHelpText>If selected, PSA creates active resource records when API Resource Correlation ID is populated. API Resource Correlation ID is always populated when details are entered via the API.</inlineHelpText>
        <label>Create Records as Active Resources</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Update_Resource_Employment_Dates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected and API Resource Correlation ID is populated, PSA updates start date or last date when a resource&apos;s employment status becomes active or terminated. API Resource Correlation ID is always populated when details are entered via the API.</description>
        <inlineHelpText>If selected and API Resource Correlation ID is populated, PSA updates start date or last date when a resource&apos;s employment status becomes active or terminated. API Resource Correlation ID is always populated when details are entered via the API.</inlineHelpText>
        <label>Update Resource Employment Dates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Worker_Account_Filter_Field__c</fullName>
        <description>Key name in Foundations to use for filtering worker messages for creating Person Accounts.</description>
        <inlineHelpText>ERP key name to use for filtering worker messages for creating Person Accounts.</inlineHelpText>
        <label>Worker Account Filter Field Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Worker_Account_Filter_Values__c</fullName>
        <description>Key value(s) in Foundations used for filtering worker messages for creating Person Accounts. Text and Picklist fields support multiple, semicolon-delimited values.</description>
        <inlineHelpText>ERP message key value(s) used for filtering worker messages for creating Person Accounts. Text and Picklist fields support multiple, semicolon-delimited values.</inlineHelpText>
        <label>Worker Account Filter Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Worker_Filter_Field__c</fullName>
        <description>Key name in Foundations to use for filtering worker messages.</description>
        <inlineHelpText>ERP key name to use for filtering worker messages.</inlineHelpText>
        <label>Worker Filter Field Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Worker_Filter_Values__c</fullName>
        <description>Key value(s) in Foundations message used for filtering worker messages for creating Contacts. Text and Picklist fields support multiple, semicolon-delimited values.</description>
        <inlineHelpText>ERP message key value(s) used for filtering worker messages for creating Contacts. Text and Picklist fields support multiple, semicolon-delimited values.</inlineHelpText>
        <label>Worker Filter Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Foundations PSA Messaging Settings</label>
</CustomObject>